Bug 990761 - Handle HDR sending us more than one picture. r=dhylands, a=1.4+